--- a/frontend/src/components/create-task/create-task.component.scss
+++ b/frontend/src/components/create-task/create-task.component.scss
@@ -16,9 +16,15 @@ form {
   justify-content: center;
   flex-direction: column;
   gap: 20px;
+  width: 100%;
+
+  mat-form-field {
+    width: 100%;
+  }
 }
 
 .modal-footer {
   display: flex;
-  gap: 70px;
+  justify-content: space-around;
+  width: 100%;
 }
