--- a/frontend/src/components/tasks/tasks.component.scss
+++ b/frontend/src/components/tasks/tasks.component.scss
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding: 0 15px;
 
   .taks-list {
     display: flex;
@@ -22,7 +23,7 @@
   color: white;
   border-radius: 25px;
   height: 100%;
-  margin: 10px;
+  margin: 10px 0;
   padding: 10px 15px;
 
   .task-details {
@@ -126,7 +127,7 @@
 }
 
 .btn {
-  width: 350px;
+  width: 100%;
   height: 50px;
   border-radius: 15px;
   background-color: #218dab;
