Implementing responsive & unsubscribing from observable

--- a/frontend/src/components/tasks/tasks.component.html
+++ b/frontend/src/components/tasks/tasks.component.html
@@ -51,7 +51,7 @@
             <span>{{ task.createdDate | date : "MMM" }} </span>
           </div>
 
-          <div>
+          <div class="task-actions">
             <div class="task-edit">
               <i
                 class="fa-regular fa-pen-to-square"
