--- a/frontend/src/components/tasks/tasks.component.scss
+++ b/frontend/src/components/tasks/tasks.component.scss
@@ -16,22 +16,22 @@
 }
 
 .task-card {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr;
   background-color: #249295;
   color: white;
   border-radius: 25px;
   height: 100%;
   margin: 10px 0;
   padding: 10px 15px;
+  gap: 15px;
 
   .task-details {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     height: 100%;
-    min-width: 100px;
     max-width: 100px;
     padding: 0 10px;
 
@@ -50,6 +50,8 @@
   .status {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    gap: 5px;
     text-align: center;
     height: 100%;
     padding: 0 10px;
@@ -60,15 +62,15 @@
     }
 
     .btn-status {
-      margin-top: 8px;
       width: 100%;
-      height: 100%;
+      height: 35px;
       border-radius: 5px;
       background-color: #fff;
       color: #218dab;
       font-weight: bold;
+      font-size: 10px;
       border: none;
-      padding: 10px;
+      padding: 5px;
       -webkit-box-shadow: 10px 10px 4px -8px rgba(0, 0, 0, 0.37);
       -moz-box-shadow: 10px 10px 4px -8px rgba(0, 0, 0, 0.37);
       box-shadow: 10px 10px 4px -8px rgba(0, 0, 0, 0.37);
@@ -101,15 +103,14 @@
       max-height: 50px;
       padding: 10px;
       border-radius: 10px;
-
-      margin-top: 5px;
     }
   }
 
-  div {
+  .task-actions {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     gap: 10px;
+
     .task-edit:hover {
       i {
         color: #dddddd;
@@ -141,5 +142,29 @@
   &:hover {
     cursor: pointer;
     background-color: #19677d;
+  }
+}
+
+@media (width > 300px) {
+  .task-card {
+    grid-template-columns: 1fr 1fr;
+
+    .task-details {
+      align-items: center;
+    }
+
+    .task-actions {
+      align-items: center;
+    }
+  }
+}
+
+@media (width > 600px) {
+  .task-card {
+    grid-template-columns: 1fr 1fr 1fr 20px;
+
+    .task-actions {
+      flex-direction: column;
+    }
   }
 }
