--- a/frontend/src/components/create-task/create-task.component.scss
+++ b/frontend/src/components/create-task/create-task.component.scss
@@ -21,6 +21,17 @@ form {
   mat-form-field {
     width: 100%;
   }
+
+  div {
+    text-align: center;
+    mat-radio-group {
+      background: #ccc;
+      padding: 10px;
+      border-radius: 10px;
+      display: flex;
+      justify-content: space-evenly;
+    }
+  }
 }
 
 .modal-footer {
